fix for issue 49

--- a/sass/base/_tables.scss
+++ b/sass/base/_tables.scss
@@ -1,70 +1,64 @@
 /**
- * Table Styles
+ * Tables
  *
  */
-
+ 
+ 
 /**
  * Table Variables
- * 
  */
+$table--bg-color:                                                       $muted-color--bg;
 
-/**
- * Table Structure
- */
+$table--border-radius:                                                  4px;         //$global__border-radius;
+$table--border:                                                         1px solid #333;
+$table--bg-color-hover:                                                 darken(#D5D5E5, 5%);
+$table--strip-color:                                                    darken($table--bg-color, 10%);
+ 
+$table--bg-color-success:                                               lighten(green, 60%);
+$table--bg-color-error:                                                 lighten(red, 30%);
+$table--bg-color-warning:                                               lighten(yellow, 30%);
 
-$table-cell--padding:  8px;
+$table-border-color:                                                    $strong-color--bg;
+$table-border:                                                          1px solid $table-border-color;
+$table-head-bg-color:                                                   $subtle-color--bg;
 
-
-/**
- * Table Skin
- */
-
-$table--border-radius: 4px;         //$global__border-radius;
-$table--border: 1px solid #333;     //$table--border;
-$table--bg-color-hover: red;
-$table--strip-color: yellow;
-
-$table--bg-color-success: green;
-$table--bg-color-error: red;
-$table--bg-color-warning: yellow;
-
-
-
-$table-border-color: $strong-color--bg;               /// these colors need adjustment....badly
-$table-border: 1px solid $table-border-color;
-$table-head-bg-color: $subtle-color--bg;
-// zebra striping (even rows)
-$table-zebra-bg-color: $muted-color--bg;
-$table-footer-bg-color: $subtle-color--bg;
-
-$table-header-text: $strong-color--txt;
-
-$table__bg-color: $muted-color--bg;
-
-
-
+/* zebra striping (even rows) */
+$table-zebra-bg-color:                                                  $muted-color--bg;
+$table-footer-bg-color:                                                 $subtle-color--bg;
+ 
+$table-header-text:                                                     $strong-color--txt;
+ 
 
 /*** @export "base-table-styles" css */
 /**
  * Base Table Styles
+ *
+ * 1. Allows for rounded corners
+ * 2. Align column headings
+ * 3. Prevent double border
+ * 4. Round corner for first th or td in the first row in the first thead or tbody
+ * 5. Round corner for first th or td in the last row in the last thead or tbody
+ * 6. Remove border-radius for first and last td in the last row in the last tbody for table with tfoot
+ * 7. Round the left border on the first td/th
+ * 8. Round the left border on the last td/th
  */
+
 table { 
   max-width: 100%;
-  border-spacing: 0;
  }
-
+ 
 .table {
   width: 100%;
   margin-bottom: $base-line-height;
   background-color: $table--bg-color;
-  border: 1px solid $table--border;
-  border-collapse: separate; // Done so we can round those corners!
+  border: $table--border;
+  border-collapse: separate;                                              /* 1 */
   border-left: 0;
   @include border-radius($table--border-radius);
   th,
   td {
     border-left: $table--border;
-    padding: $table-cell--padding;
+    padding: .5em;
     line-height: $base-line-height;
     text-align: left;
     vertical-align: top;  
@@ -72,11 +66,9 @@ table {
   th {
     font-weight: bold;
   }
-  // Bottom align for column headings
   thead th {
-    vertical-align: bottom;
+    vertical-align: bottom;                                                /* 2 */
   }
-  // Prevent a double border
   caption + thead tr:first-child th,
   caption + tbody tr:first-child th,
   caption + tbody tr:first-child td,
@@ -85,54 +77,48 @@ table {
   colgroup + tbody tr:first-child td,
   thead:first-child tr:first-child th,
   tbody:first-child tr:first-child th,
-  tbody:first-child tr:first-child td {
+  tbody:first-child tr:first-child td {                                     /* 3 */
     border-top: 0;
   }
-  // For first th or td in the first row in the first thead or tbody
   thead:first-child tr:first-child > th:first-child,
-  tbody:first-child tr:first-child > td:first-child {
+  tbody:first-child tr:first-child > td:first-child {                       /* 4 */
     @include border-top-left-radius($table--border-radius);
   }
   thead:first-child tr:first-child > th:last-child,
   tbody:first-child tr:first-child > td:last-child {
     @include border-top-right-radius($table--border-radius);
   }
-  // For first th or td in the last row in the last thead or tbody
   thead:last-child tr:last-child > th:first-child,
   tbody:last-child tr:last-child > td:first-child,
-  tfoot:last-child tr:last-child > td:first-child {
-    @include border-bottom-left-radius($table--border-radius);
+  tfoot:last-child tr:last-child > td:first-child {                         /* 5 */
+    @include border-bottom-left-radius($table--border-radius);    
   }
   thead:last-child tr:last-child > th:last-child,
   tbody:last-child tr:last-child > td:last-child,
   tfoot:last-child tr:last-child > td:last-child {
     @include border-bottom-right-radius($table--border-radius);
   }
-
-  // Clear border-radius for first and last td in the last row in the last tbody for table with tfoot
   tfoot + tbody:last-child tr:last-child td:first-child {
-    @include border-bottom-left-radius(0);
+    @include border-bottom-left-radius(0);                                  /* 6 */
   }
   tfoot + tbody:last-child tr:last-child td:last-child {
     @include border-bottom-right-radius(0);
   }
-
-  // Special fixes to round the left border on the first td/th
   caption + thead tr:first-child th:first-child,
   caption + tbody tr:first-child td:first-child,
   colgroup + thead tr:first-child th:first-child,
   colgroup + tbody tr:first-child td:first-child {
-    @include border-top-left-radius($table--border-radius);
+    @include border-top-left-radius($table--border-radius);                 /* 7 */
   }
   caption + thead tr:first-child th:last-child,
   caption + tbody tr:first-child td:last-child,
   colgroup + thead tr:first-child th:last-child,
   colgroup + tbody tr:first-child td:last-child {
-    @include border-top-right-radius($table--border-radius);
+    @include border-top-right-radius($table--border-radius);                /* 8 */
   }
 }
-
-
+ 
+ 
 /*** @export "table-zebra-stripes" css */
 /**
  * Table Zebra Stripes
@@ -143,8 +129,8 @@ table {
     background-color: $table--strip-color;
   }
 }   
-
-
+ 
+ 
 /*** @export "table-hover-highlight" css */
 /**
  * Table Hover Highlight
@@ -155,4 +141,12 @@ table {
     background-color: $table--bg-color-hover;
   }
 }
+
+
+/**
+ * Table States
+ */
+.is-table--error { background-color: $table--bg-color-error; }
+.is-table--warning { background-color: $table--bg-color-warning; }
+.is-table--success { background-color: $table--bg-color-success; }
 
