--- a/docs/output-site/components/buttons.html
+++ b/docs/output-site/components/buttons.html
@@ -73,9 +73,9 @@ Buttons are a very common component in building user interactions. The button ob
 
 <h2 id="button-classes">Button Classes</h2>
 <div class="highlight"><pre><a name="l-1"></a><span class="nt">&lt;p&gt;</span>
-<a name="l-2"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn--default btn--small&quot;</span><span class="nt">&gt;</span>Small Default btn<span class="nt">&lt;/a&gt;</span> 
-<a name="l-3"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn--default btn--medium&quot;</span><span class="nt">&gt;</span>Medium Default btn<span class="nt">&lt;/a&gt;</span>
-<a name="l-4"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn--default btn--large&quot;</span><span class="nt">&gt;</span>Large Default btn<span class="nt">&lt;/a&gt;</span>
+<a name="l-2"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn__small btn--default&quot;</span><span class="nt">&gt;</span>Small Default btn<span class="nt">&lt;/a&gt;</span> 
+<a name="l-3"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn__medium btn--default&quot;</span><span class="nt">&gt;</span>Medium Default btn<span class="nt">&lt;/a&gt;</span>
+<a name="l-4"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn__large btn--default&quot;</span><span class="nt">&gt;</span>Large Default btn<span class="nt">&lt;/a&gt;</span>
 <a name="l-5"></a><span class="nt">&lt;/p&gt;</span>
 </pre></div>
 
@@ -122,31 +122,31 @@ Buttons are a very common component in building user interactions. The button ob
 
 <h2 id="default-buttons">Default Buttons</h2>
 <p>
-<a href="#" title="Button" class="btn btn--default btn--small">Small Default btn</a> <a href="#" title="Button" class="btn btn--default btn--medium">Medium Default btn</a> <a href="#" title="Button" class="btn btn--default btn--large">Large Default btn</a>
+<a href="#" title="Button" class="btn btn__small btn--default">Small Default btn</a> <a href="#" title="Button" class="btn btn__medium btn--default">Medium Default btn</a> <a href="#" title="Button" class="btn btn__large btn--default">Large Default btn</a>
 </p>
 
 
 <h2 id="primary-buttons">Primary Buttons</h2>
 <p>
-<a href="#" title="Button" class="btn btn--primary btn--small">Small Primary btn</a> <a href="#" title="Button" class="btn btn--primary btn--medium">Medium Primary btn</a> <a href="#" title="Button" class="btn btn--primary btn--large">Large Primary btn</a>
+<a href="#" title="Button" class="btn btn__small btn--primary">Small Primary btn</a> <a href="#" title="Button" class="btn btn__mediuam btn--primary">Medium Primary btn</a> <a href="#" title="Button" class="btn btn__large btn--primary">Large Primary btn</a>
 </p>
 
 
 <h2 id="secondary-buttons">Secondary Buttons</h2>
 <p>
-<a href="#" title="Button" class="btn btn--secondary btn--small">Small Secondary btn</a> <a href="#" title="Button" class="btn btn--secondary btn--medium">Medium Secondary btn</a> <a href="#" title="Button" class="btn btn--secondary btn--large">Large Secondary btn</a>
+<a href="#" title="Button" class="btn btn__small btn--secondary">Small Secondary btn</a> <a href="#" title="Button" class="btn btn__medium btn--secondary">Medium Secondary btn</a> <a href="#" title="Button" class="btn btn__large btn--secondary">Large Secondary btn</a>
 </p>
 
 
 <h2 id="positive-buttons">Positive Buttons</h2>
 <p>
-<a href="#" title="Button" class="btn btn--success btn--small">Small Success btn</a> <a href="#" title="Button" class="btn btn--success btn--medium">Medium Success btn</a> <a href="#" title="Button" class="btn btn--success btn--large">Large Success btn</a>
+<a href="#" title="Button" class="btn btn__small btn--positive">Small Success btn</a> <a href="#" title="Button" class="btn btn__medium btn--positive">Medium Success btn</a> <a href="#" title="Button" class="btn btn__large btn--positive">Large Success btn</a>
 </p>
 
 
 <h2 id="negative-buttons">Negative Buttons</h2>
 <p>
-<a href="#" title="Button" class="btn btn--danger btn--small">Small Danger btn</a> <a href="#" title="Button" class="btn btn--danger btn--medium">Medium Danger btn</a> <a href="#" title="Button" class="btn btn--danger btn--large">Large Danger btn</a>
+<a href="#" title="Button" class="btn btn__small btn--danger">Small Danger btn</a> <a href="#" title="Button" class="btn btn__medium btn--danger">Medium Danger btn</a> <a href="#" title="Button" class="btn btn__large btn--danger">Large Danger btn</a>
 </p>
 
 
@@ -218,7 +218,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-67"></a><span class="cm">/**</span>
 <a name="sass--components--_buttons.scss-idio.html-68"></a><span class="cm"> * Small Button </span>
 <a name="sass--components--_buttons.scss-idio.html-69"></a><span class="cm"> */</span>
-<a name="sass--components--_buttons.scss-idio.html-70"></a><span class="nc">.btn--</span><span class="si">#{</span><span class="nv">$small</span><span class="si">}</span> <span class="p">{</span>
+<a name="sass--components--_buttons.scss-idio.html-70"></a><span class="nc">.btn__</span><span class="si">#{</span><span class="nv">$small</span><span class="si">}</span> <span class="p">{</span>
 <a name="sass--components--_buttons.scss-idio.html-71"></a>  <span class="na">font-size</span><span class="o">:</span> <span class="p">(</span><span class="nv">$base-font-size</span> <span class="o">-</span> <span class="mi">4</span><span class="kt">px</span><span class="p">);</span>
 <a name="sass--components--_buttons.scss-idio.html-72"></a>  <span class="na">padding</span><span class="o">:</span> <span class="mi">2</span><span class="kt">px</span> <span class="mi">6</span><span class="kt">px</span><span class="p">;</span> <span class="c1">//6</span>
 <a name="sass--components--_buttons.scss-idio.html-73"></a>  <span class="na">line-height</span><span class="o">:</span> <span class="nv">$base-line-height</span><span class="p">;</span><span class="c1">//7</span>
@@ -229,7 +229,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-78"></a><span class="cm">/**</span>
 <a name="sass--components--_buttons.scss-idio.html-79"></a><span class="cm"> * Medium Button </span>
 <a name="sass--components--_buttons.scss-idio.html-80"></a><span class="cm"> */</span>
-<a name="sass--components--_buttons.scss-idio.html-81"></a><span class="nc">.btn--</span><span class="si">#{</span><span class="nv">$medium</span><span class="si">}</span> <span class="p">{</span>
+<a name="sass--components--_buttons.scss-idio.html-81"></a><span class="nc">.btn__</span><span class="si">#{</span><span class="nv">$medium</span><span class="si">}</span> <span class="p">{</span>
 <a name="sass--components--_buttons.scss-idio.html-82"></a>  <span class="na">font-size</span><span class="o">:</span> <span class="p">(</span><span class="nv">$base-font-size</span> <span class="o">-</span> <span class="mi">2</span><span class="kt">px</span><span class="p">);</span>
 <a name="sass--components--_buttons.scss-idio.html-83"></a>  <span class="na">padding</span><span class="o">:</span> <span class="mi">5</span><span class="kt">px</span> <span class="mi">9</span><span class="kt">px</span><span class="p">;</span> <span class="c1">//6</span>
 <a name="sass--components--_buttons.scss-idio.html-84"></a>  <span class="na">line-height</span><span class="o">:</span> <span class="nv">$base-line-height</span><span class="p">;</span><span class="c1">//7</span>
@@ -240,7 +240,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-89"></a><span class="cm">/**</span>
 <a name="sass--components--_buttons.scss-idio.html-90"></a><span class="cm"> * Large Button </span>
 <a name="sass--components--_buttons.scss-idio.html-91"></a><span class="cm"> */</span>
-<a name="sass--components--_buttons.scss-idio.html-92"></a><span class="nc">.btn--</span><span class="si">#{</span><span class="nv">$large</span><span class="si">}</span> <span class="p">{</span>
+<a name="sass--components--_buttons.scss-idio.html-92"></a><span class="nc">.btn__</span><span class="si">#{</span><span class="nv">$large</span><span class="si">}</span> <span class="p">{</span>
 <a name="sass--components--_buttons.scss-idio.html-93"></a>  <span class="na">font-size</span><span class="o">:</span> <span class="p">(</span><span class="nv">$base-font-size</span> <span class="o">+</span> <span class="mi">2</span><span class="kt">px</span><span class="p">);</span>
 <a name="sass--components--_buttons.scss-idio.html-94"></a>  <span class="na">padding</span><span class="o">:</span> <span class="mi">9</span><span class="kt">px</span> <span class="mi">14</span><span class="kt">px</span><span class="p">;</span> <span class="c1">//6</span>
 <a name="sass--components--_buttons.scss-idio.html-95"></a>  <span class="na">line-height</span><span class="o">:</span> <span class="nv">$base-line-height</span><span class="p">;</span><span class="c1">//7</span>
@@ -253,7 +253,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-102"></a><span class="cm"> *</span>
 <a name="sass--components--_buttons.scss-idio.html-103"></a><span class="cm"> * full screen, block level button style for small screens </span>
 <a name="sass--components--_buttons.scss-idio.html-104"></a><span class="cm"> */</span>
-<a name="sass--components--_buttons.scss-idio.html-105"></a><span class="nc">.btn--</span><span class="si">#{</span><span class="nv">$touch</span><span class="si">}</span> <span class="p">{</span>
+<a name="sass--components--_buttons.scss-idio.html-105"></a><span class="nc">.btn__</span><span class="si">#{</span><span class="nv">$touch</span><span class="si">}</span> <span class="p">{</span>
 <a name="sass--components--_buttons.scss-idio.html-106"></a>  <span class="k">@extend</span> <span class="nc">.btn--</span><span class="si">#{</span><span class="no">large</span><span class="si">}</span><span class="o">;</span>
 <a name="sass--components--_buttons.scss-idio.html-107"></a>  <span class="nt">display</span><span class="nd">:</span> <span class="nt">block</span><span class="o">;</span>
 <a name="sass--components--_buttons.scss-idio.html-108"></a>  <span class="nt">width</span><span class="nd">:</span> <span class="nt">100</span><span class="err">%</span><span class="o">;</span>
@@ -272,7 +272,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-120"></a><span class="cm">/**</span>
 <a name="sass--components--_buttons.scss-idio.html-121"></a><span class="cm"> * Default Button Skin</span>
 <a name="sass--components--_buttons.scss-idio.html-122"></a><span class="cm"> */</span>
-<a name="sass--components--_buttons.scss-idio.html-123"></a><span class="nc">.</span><span class="si">#{</span><span class="nv">$default</span><span class="si">}</span> <span class="p">{</span>
+<a name="sass--components--_buttons.scss-idio.html-123"></a><span class="nc">.btn--</span><span class="si">#{</span><span class="nv">$default</span><span class="si">}</span> <span class="p">{</span>
 <a name="sass--components--_buttons.scss-idio.html-124"></a>  <span class="na">background-color</span><span class="o">:</span> <span class="nv">$btn__default--color1</span><span class="p">;</span>
 <a name="sass--components--_buttons.scss-idio.html-125"></a>  <span class="na">color</span><span class="o">:</span> <span class="nv">$white</span><span class="p">;</span>
 <a name="sass--components--_buttons.scss-idio.html-126"></a>  <span class="na">border</span><span class="o">:</span> <span class="mi">1</span><span class="kt">px</span> <span class="no">solid</span> <span class="nv">$strong</span><span class="p">;</span>
@@ -293,7 +293,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-141"></a><span class="cm">/**</span>
 <a name="sass--components--_buttons.scss-idio.html-142"></a><span class="cm"> * Positive Button Skin</span>
 <a name="sass--components--_buttons.scss-idio.html-143"></a><span class="cm"> */</span>
-<a name="sass--components--_buttons.scss-idio.html-144"></a><span class="nc">.</span><span class="si">#{</span><span class="nv">$positive</span><span class="si">}</span> <span class="p">{</span>
+<a name="sass--components--_buttons.scss-idio.html-144"></a><span class="nc">.btn--</span><span class="si">#{</span><span class="nv">$positive</span><span class="si">}</span> <span class="p">{</span>
 <a name="sass--components--_buttons.scss-idio.html-145"></a>  <span class="na">background-color</span><span class="o">:</span> <span class="nv">$btn__positive--color1</span><span class="p">;</span>
 <a name="sass--components--_buttons.scss-idio.html-146"></a>  <span class="na">color</span><span class="o">:</span> <span class="nv">$white</span><span class="p">;</span>
 <a name="sass--components--_buttons.scss-idio.html-147"></a>  <span class="na">border</span><span class="o">:</span> <span class="mi">1</span><span class="kt">px</span> <span class="no">solid</span> <span class="nv">$strong</span><span class="p">;</span>
@@ -314,7 +314,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-162"></a><span class="cm">/**</span>
 <a name="sass--components--_buttons.scss-idio.html-163"></a><span class="cm"> * Negative Button Skin</span>
 <a name="sass--components--_buttons.scss-idio.html-164"></a><span class="cm"> */</span>
-<a name="sass--components--_buttons.scss-idio.html-165"></a><span class="nc">.</span><span class="si">#{</span><span class="nv">$negative</span><span class="si">}</span> <span class="p">{</span>
+<a name="sass--components--_buttons.scss-idio.html-165"></a><span class="nc">.btn--</span><span class="si">#{</span><span class="nv">$negative</span><span class="si">}</span> <span class="p">{</span>
 <a name="sass--components--_buttons.scss-idio.html-166"></a>  <span class="na">background-color</span><span class="o">:</span> <span class="nv">$btn__negative--color1</span><span class="p">;</span>
 <a name="sass--components--_buttons.scss-idio.html-167"></a>  <span class="na">color</span><span class="o">:</span> <span class="nv">$white</span><span class="p">;</span>
 <a name="sass--components--_buttons.scss-idio.html-168"></a>  <span class="na">border</span><span class="o">:</span> <span class="mi">1</span><span class="kt">px</span> <span class="no">solid</span> <span class="nv">$strong</span><span class="p">;</span>
@@ -335,7 +335,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-183"></a><span class="cm">/**</span>
 <a name="sass--components--_buttons.scss-idio.html-184"></a><span class="cm"> * Secondary Button Skin</span>
 <a name="sass--components--_buttons.scss-idio.html-185"></a><span class="cm"> */</span>
-<a name="sass--components--_buttons.scss-idio.html-186"></a><span class="nc">.</span><span class="si">#{</span><span class="nv">$secondary</span><span class="si">}</span> <span class="p">{</span>
+<a name="sass--components--_buttons.scss-idio.html-186"></a><span class="nc">.btn--</span><span class="si">#{</span><span class="nv">$secondary</span><span class="si">}</span> <span class="p">{</span>
 <a name="sass--components--_buttons.scss-idio.html-187"></a>  <span class="na">background-color</span><span class="o">:</span> <span class="nv">$btn__secondary--color1</span><span class="p">;</span>
 <a name="sass--components--_buttons.scss-idio.html-188"></a>  <span class="na">color</span><span class="o">:</span> <span class="nv">$white</span><span class="p">;</span>
 <a name="sass--components--_buttons.scss-idio.html-189"></a>  <span class="na">border</span><span class="o">:</span> <span class="mi">1</span><span class="kt">px</span> <span class="no">solid</span> <span class="nv">$strong</span><span class="p">;</span>
