--- a/docs/output-site/components/buttons.html
+++ b/docs/output-site/components/buttons.html
@@ -68,15 +68,11 @@
 
 <h1 id="buttons">Buttons</h1>
 <p class="lead">
-Buttons are a very common component in building user interactions. The button object is very flexible and extendable mixin that can easily be customized globally by changing the button variables within the settings.scss partial, or by providing optional over-ride arguments when calling the mixin on the fly.
+Buttons extend the <a href="/objects/button-object.html">Button-Object</a> and are extended with a structure and a skin class.
 </p>
 
 <h2 id="button-classes">Button Classes</h2>
-<div class="highlight"><pre><a name="l-1"></a><span class="nt">&lt;p&gt;</span>
-<a name="l-2"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn__small btn--default&quot;</span><span class="nt">&gt;</span>Small Default btn<span class="nt">&lt;/a&gt;</span> 
-<a name="l-3"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn__medium btn--default&quot;</span><span class="nt">&gt;</span>Medium Default btn<span class="nt">&lt;/a&gt;</span>
-<a name="l-4"></a><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">&quot;#&quot;</span> <span class="na">title=</span><span class="s">&quot;Button&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn__large btn--default&quot;</span><span class="nt">&gt;</span>Large Default btn<span class="nt">&lt;/a&gt;</span>
-<a name="l-5"></a><span class="nt">&lt;/p&gt;</span>
+<div class="highlight"><pre><a name="l-1"></a><span class="nt">&lt;button</span> <span class="na">type=</span><span class="s">&quot;submit&quot;</span> <span class="na">class=</span><span class="s">&quot;btn btn__small btn--default&quot;</span><span class="nt">&gt;</span>Small Default btn<span class="nt">&lt;/button&gt;</span> 
 </pre></div>
 
 
@@ -121,39 +117,81 @@ Buttons are a very common component in building user interactions. The button ob
 
 
 <h2 id="default-buttons">Default Buttons</h2>
-<p>
-<a href="#" title="Button" class="btn btn__small btn--default">Small Default btn</a> <a href="#" title="Button" class="btn btn__medium btn--default">Medium Default btn</a> <a href="#" title="Button" class="btn btn__large btn--default">Large Default btn</a>
-</p>
+<button type="submit" class="btn btn__small btn--default">
+Small Default btn
+</button> 
+<button type="submit" class="btn btn__medium btn--default">
+Medium Default btn
+</button>
+<button type="submit" class="btn btn__large btn--default">
+Large Default btn
+</button>
 
 
 <h2 id="primary-buttons">Primary Buttons</h2>
-<p>
-<a href="#" title="Button" class="btn btn__small btn--primary">Small Primary btn</a> <a href="#" title="Button" class="btn btn__mediuam btn--primary">Medium Primary btn</a> <a href="#" title="Button" class="btn btn__large btn--primary">Large Primary btn</a>
-</p>
+<button type="submit" class="btn btn__small btn--primary">
+Small Primary btn
+</button>
+<button type="submit" class="btn btn__medium btn--primary">
+Medium Primary btn
+</button>
+<button type="submit" class="btn btn__large btn--primary">
+Large Primary btn
+</button>
 
 
 <h2 id="secondary-buttons">Secondary Buttons</h2>
-<p>
-<a href="#" title="Button" class="btn btn__small btn--secondary">Small Secondary btn</a> <a href="#" title="Button" class="btn btn__medium btn--secondary">Medium Secondary btn</a> <a href="#" title="Button" class="btn btn__large btn--secondary">Large Secondary btn</a>
-</p>
+<button type="submit" class="btn btn__small btn--secondary">
+Small Secondary btn
+</button>
+<button type="submit" class="btn btn__medium btn--secondary">
+Medium Secondary btn
+</button>
+<button type="submit" class="btn btn__large btn--secondary">
+Large Secondary btn
+</button>
 
 
 <h2 id="positive-buttons">Positive Buttons</h2>
-<p>
-<a href="#" title="Button" class="btn btn__small btn--positive">Small Success btn</a> <a href="#" title="Button" class="btn btn__medium btn--positive">Medium Success btn</a> <a href="#" title="Button" class="btn btn__large btn--positive">Large Success btn</a>
-</p>
+<button type="submit" class="btn btn__small btn--positive">
+Small Success btn
+</button> 
+<button type="submit" class="btn btn__medium btn--positive">
+Medium Success btn
+</button> 
+<button type="submit" class="btn btn__large btn--positive">
+Large Success btn
+</button> 
 
 
 <h2 id="negative-buttons">Negative Buttons</h2>
-<p>
-<a href="#" title="Button" class="btn btn__small btn--danger">Small Danger btn</a> <a href="#" title="Button" class="btn btn__medium btn--danger">Medium Danger btn</a> <a href="#" title="Button" class="btn btn__large btn--danger">Large Danger btn</a>
-</p>
+<button type="submit" class="btn btn__small btn--danger">
+Small Danger btn
+</button> 
+<button type="submit" class="btn btn__medium btn--danger">
+Medium Danger btn
+</button> 
+<button type="submit" class="btn btn__large btn--danger">
+Large Danger btn
+</button> 
 
 
 <h2 id="disabled-button-state">Disabled Button State</h2>
-<p>
-<a href="#" title="Button" class="btn btn--default btn--medium btn--disabled">Disabled btn State</a> <a href="#" title="Button" class="btn btn--primary btn--medium btn--disabled">Disabled btn State</a> <a href="#" title="Button" class="btn btn--secondary btn--medium btn--disabled">Disabled btn State</a> <a href="#" title="Button" class="btn btn--success btn--medium btn--disabled">Disabled btn State</a> <a href="#" title="Button" class="btn btn--danger btn--medium btn--disabled">Disabled btn State</a>
-</p>
+<button type="submit" class="btn btn__medium btn--default btn--disabled">
+Disabled btn State
+</button> 
+<button type="submit" class="btn btn__medium btn--primary btn--disabled">
+Disabled btn State
+</button> 
+<button type="submit" class="btn btn__medium btn--secondary btn--disabled">
+Disabled btn State
+</button> 
+<button type="submit" class="btn btn__medium btn--success btn--disabled">
+Disabled btn State
+</button>
+<button type="submit" class="btn btn__medium btn--danger btn--disabled">
+Disabled btn State
+</button> 
 <!-- section "end" --> 
 
 <!--
@@ -161,33 +199,33 @@ Buttons are a very common component in building user interactions. The button ob
 <h2>btn-group</h2>
 <script src="https://gist.github.com/3161392.js?file=Archetype btn-Group"></script>
     <ul class="btn-group">
-      <li><a href="#" title="btn-Group" class="btn primary medium">btn 1</a></li>
-      <li><a href="#" title="btn-Group" class="btn primary medium">btn 2</a></li>
-      <li><a href="#" title="btn-Group" class="btn primary medium">btn 3</a></li>
-      <li><a href="#" title="btn-Group" class="btn primary medium">btn 4</a></li>
+      <li><button href="#" title="btn-Group" class="btn primary medium">btn 1</button></li>
+      <li><button href="#" title="btn-Group" class="btn primary medium">btn 2</button></li>
+      <li><button href="#" title="btn-Group" class="btn primary medium">btn 3</button></li>
+      <li><button href="#" title="btn-Group" class="btn primary medium">btn 4</button></li>
     </ul>
 
     <ul class="btn-group">
-      <li><a href="#" title="btn-Group" class="btn secondary medium">btn 1</a></li>
-      <li><a href="#" title="btn-Group" class="btn secondary medium">btn 2</a></li>
-      <li><a href="#" title="btn-Group" class="btn secondary medium">btn 3</a></li>
-      <li><a href="#" title="btn-Group" class="btn secondary medium">btn 4</a></li>
+      <li><button href="#" title="btn-Group" class="btn secondary medium">btn 1</button></li>
+      <li><button href="#" title="btn-Group" class="btn secondary medium">btn 2</button></li>
+      <li><button href="#" title="btn-Group" class="btn secondary medium">btn 3</button></li>
+      <li><button href="#" title="btn-Group" class="btn secondary medium">btn 4</button></li>
     </ul>
 
 <h3>Vertical btn Group</h3>
 <p>In the event that a btn group's width exceeds its containing element (on small screens) you can easily set a breakpoint and ad the 'vertical' argument to the btn-group mixin within your media query. This way, your btn group will degrade to the full-btn style without having to change any markup.</p>
     <ul class="vertical-btn-group">
-      <li><a href="#" title="btn-Group" class="btn secondary medium">btn 1</a></li>
-      <li><a href="#" title="btn-Group" class="btn secondary medium">btn 2</a></li>
-      <li><a href="#" title="btn-Group" class="btn secondary medium">btn 3</a></li>
-      <li><a href="#" title="btn-Group" class="btn secondary medium">btn 4</a></li>
+      <li><button href="#" title="btn-Group" class="btn secondary medium">btn 1</button></li>
+      <li><button href="#" title="btn-Group" class="btn secondary medium">btn 2</button></li>
+      <li><button href="#" title="btn-Group" class="btn secondary medium">btn 3</button></li>
+      <li><button href="#" title="btn-Group" class="btn secondary medium">btn 4</button></li>
     </ul>
 
 
 <h1>Round btn</h1>
-<a href="#" class="btn btn-round"><span class="icon-twitter-bird"></span></a>
-<a href="#" class="btn btn-round"><span class="icon-github"></span></a>
-<a href="#" class="btn btn-round"><span class="icon-th"></span></a>
+<button href="#" class="btn btn-round"><span class="icon-twitter-bird"></span></button>
+<button href="#" class="btn btn-round"><span class="icon-github"></span></button>
+<button href="#" class="btn btn-round"><span class="icon-th"></span></button>
 
 -->
 
@@ -196,12 +234,29 @@ Buttons are a very common component in building user interactions. The button ob
 <p>
 Deemphasised btn option that looks like a link, but behaves like a btn.
 </p>
-<p><a href="#" title="Button" class="btn btn--default btn--small">Small Default btn</a> <a href="#" title="Button" class="btn btn--link btn--small">Link btn</a> <a href="#" title="Button" class="btn btn--link btn--small btn--disabled">Disabled Link btn</a></p>
+<button type="submit" class="btn btn__small btn--default">
+Small Default btn
+</button>
+<button type="submit" class="btn btn--link btn--small">
+Link btn
+</button>
+<button type="submit" class="btn btn--link btn--small btn--disabled">
+Disabled Link btn
+</button>
+
+
 <h2 id="full-button">Full Button</h2>
 <p>
 Full screen, block level btn style for small screens. Defaults to the large btn structure style to accomodate bigger touch surface.
 </p>
-<p><a href="#" title="Button" class="btn btn--danger btn--full">Initiate Self-Destruct Sequence</a> <a href="#" title="Button" class="btn btn--secondary btn--full">Abort</a></p>
+<button type="submit" class="btn btn__full btn--danger">
+Initiate Self-Destruct Sequence
+</button> 
+<button type="submit" class="btn btn__full btn--secondary">
+Abort
+</button>
+
+
 <h2 id="button-structure">Button Structure</h2>
 <div class="highlight"><pre><a name="sass--components--_buttons.scss-idio.html-55"></a><span class="cm">/**</span>
 <a name="sass--components--_buttons.scss-idio.html-56"></a><span class="cm"> * Button Structure</span>
@@ -254,7 +309,7 @@ Full screen, block level btn style for small screens. Defaults to the large btn 
 <a name="sass--components--_buttons.scss-idio.html-103"></a><span class="cm"> * full screen, block level button style for small screens </span>
 <a name="sass--components--_buttons.scss-idio.html-104"></a><span class="cm"> */</span>
 <a name="sass--components--_buttons.scss-idio.html-105"></a><span class="nc">.btn__</span><span class="si">#{</span><span class="nv">$touch</span><span class="si">}</span> <span class="p">{</span>
-<a name="sass--components--_buttons.scss-idio.html-106"></a>  <span class="k">@extend</span> <span class="nc">.btn--</span><span class="si">#{</span><span class="no">large</span><span class="si">}</span><span class="o">;</span>
+<a name="sass--components--_buttons.scss-idio.html-106"></a>  <span class="k">@extend</span> <span class="nc">.btn__</span><span class="si">#{</span><span class="no">large</span><span class="si">}</span><span class="o">;</span>
 <a name="sass--components--_buttons.scss-idio.html-107"></a>  <span class="nt">display</span><span class="nd">:</span> <span class="nt">block</span><span class="o">;</span>
 <a name="sass--components--_buttons.scss-idio.html-108"></a>  <span class="nt">width</span><span class="nd">:</span> <span class="nt">100</span><span class="err">%</span><span class="o">;</span>
 <a name="sass--components--_buttons.scss-idio.html-109"></a>  <span class="nt">padding-left</span><span class="nd">:</span> <span class="nt">0</span><span class="o">;</span>
