commented out missing nav component include

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -49,7 +49,7 @@
 @import "components/close";
 @import "components/icons";
 @import "components/labels";
-@import "components/nav";
+//@import "components/nav";
 @import "components/partitions";
 @import "components/spacers";
 @import "components/tabs";
