--- a/sass/base/_page.scss
+++ b/sass/base/_page.scss
@@ -12,7 +12,7 @@
  */
 
 html {
-  font-family: $normalize-body-font;                      /* 1 */
+  font-family: $body-font;                                /* 1 */
   -webkit-text-size-adjust: 100%;                         /* 2 */
   -ms-text-size-adjust: 100%;                             /* 2 */
   overflow-y: scroll;
