add -font variable to _settings.scss partial, clean up _page.scss

--- a/templates/project/_settings.scss
+++ b/templates/project/_settings.scss
@@ -106,6 +106,7 @@ $base-line-height: 24px;
  * 1. Text selection highlight color
  * 2. Text selection text color
  */
+$body-font:                           $georgia;
 
 $selection-highlight-color:           #fe57a1;        /* 1 */
 $tap-highlight-color:                 black(75);
