--- a/templates/project/base/_page.scss
+++ b/templates/project/base/_page.scss
@@ -2,13 +2,10 @@
 /**
  * Page
  *
- * Normalize:
- * 1. Sets default font family to $normalize-body-font
+ * 1. Sets default font family to $body-font - defined in _settings.scss partial
  * 2. Prevents iOS text size adjust after orientation change, without disabling user zoom.
  * 3. Removes default margin
  * 
- * Archetype:
- *
  */
 
 html {
