--- a/test/sass/_settings.scss
+++ b/test/sass/_settings.scss
@@ -34,23 +34,9 @@ $legacy-support-for-ie8 : true;                           /* 1 */
  * https://github.com/kwaledesign/Archetype-Utilities/blob/master/archetype/_normalize.scss
  * comment out any unneeded components
  */
-$mark-color:                                              #000;
-$mark-bg:                                                 #ff0;
-$body-font:                                               sans-serif;
-$code-font:                                               monospace, serif;
-$code-font-size:                                          1em;
-$small-font-size:                                         80%;
-$sub-sup-font-size:                                       75%;
-$field-set-border:                                        1px solid #c0c0c0;
-$field-set-margin:                                        0 2px;
-$field-set-padding:                                       0.35em 0.62em 0.75em;
-$selection-highlight-color:                               #fe57a1;
-$tap-highlight-color:                                     #222;
-$selection-text-color:                                    white;
-
 @mixin normalize() {
 	@include normalize-display;
-	@include normalize-base;
+	@include normalize-page;
 	@include normalize-links;
 	@include normalize-typography;
 	@include normalize-embeds;
@@ -120,6 +106,16 @@ $base-line-height: 24px;
  * 1. Text selection highlight color
  * 2. Text selection text color
  */
+
+/**
+ * @TODO:
+ *
+ * Setup typography pallet partial - these $body-font and $georgia variables are redundant 
+ * used here as temporary fix
+ * 
+ */
+$georgia: Georgia, Cambria, "Times New Roman", Times, serif !default;
+$body-font:                           $georgia;
 
 $selection-highlight-color:           #fe57a1;        /* 1 */
 $tap-highlight-color:                 black(75);
