update screen.scss within Archetype to disable all grid systems by default

--- a/templates/project/screen.scss
+++ b/templates/project/screen.scss
@@ -59,7 +59,7 @@
  * Layout
  * 
  */
-@import "layout/susy-grid";
-@import "layout/singularity-grid";
+//@import "layout/susy-grid";
+//@import "layout/singularity-grid";
 @import "layout/print";
 
