update docs screen.scss file

--- a/docs/sass/screen.scss
+++ b/docs/sass/screen.scss
@@ -69,7 +69,8 @@
 @import "docs/settings";
 @import "docs/pygments";
 @import "docs/components";
-@import "docs/layout";
-
+//@import "docs/layout";
 @import "docs/fonts.scss";
+
+@import "docs/singularity-grid";
 
