add grid-link class to _singularity-grid.scss partial, add js to toggle grid-active class to container

--- a/docs/sass/docs/_singularity-grid.scss
+++ b/docs/sass/docs/_singularity-grid.scss
@@ -37,11 +37,16 @@ $gutters: add-gutter(.25 at 50em);
  * Layout
  * 
  */
+
+.grid-link { 
+}
+
+
 .container {
-  @include background-grid();
   margin: 0 auto;
   min-height: 100%;
   @include pie-clearfix;
+  &.active-grid { @include background-grid(); }
 }
 
 
