complete directory restructuring for issue #103

--- a/templates/project/base/_typography-pallet.scss
+++ b/templates/project/base/_typography-pallet.scss
@@ -1,10 +1,60 @@
+/*** @export "typography-variables" css */
 /**
- * Typography
- * 
- * typography styles are scoped. only 'default' type values are those provided by the normalize reset
- * this is done to avoid repeatidly overridding
- * see: http://css-tricks.com/opt-in-typography/  &  http://anthonyshort.me/2012/05/global-typographic-styles-suck
+ * Typography Pallet
+ *
+ * 1. Text selection highlight color
+ * 2. Text selection text color
  */
+
+/**
+ * Modular Scale
+ * 
+ * https://github.com/scottkellum/modular-scale
+ * http://thesassway.com/projects/modular-scale
+ * http://modularscales.com
+ *
+ * To set multiple $base-size and/or $ratio values use a space separated list. If
+ * you use multiple $base-size values, the starting point of the scale will always
+ * be the lowest value in this list.
+ *
+ * golden 1:1.618 (default)
+ * double-octave 1:4 
+ * major-twelfth 1:3
+ * major-eleventh 3:8 
+ * major-tenth 2:5
+ * octave 1:2
+ * major-seventh 8:15
+ * minor-seventh 9:16
+ * major-sixth
+ * minor-sixth 5:8
+ * fifth 2:3
+ * augfourth 1:√2
+ * fourth 3:4
+ * major-third 4:5
+ * minor-third 5:6
+ * major-second 8:9
+ * minor-second 15:16
+ *
+ * 1. Default to $base-font-size 
+ */
+
+@import "modular-scale";
+
+$base-size: 16px;                                     /* 1 */
+$ratio: fourth();
+
+
+
+$georgia: Georgia, Cambria, "Times New Roman", Times, serif !default;
+
+
+$body-font:                           $georgia;
+
+$selection-highlight-color:           #fe57a1;        /* 1 */
+$tap-highlight-color:                 black(75);
+$selection-text-color:                $white;         /* 2 */
+
+
 
 
 /**
@@ -119,123 +169,4 @@ $copy--mark-bg-color:                 yellow;
 $copy--mark-text-color:               $white;
 
 
-/**
- * Main Copy Scope 
- */
-.#{$main-type-scope} {
-
-/**
- * Font-face & Icon Fonts
- */
-//@include font-face();
-
-/**
- * Headers 
- */
-  h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
-    color: $copy--header-text-color;                 
-    font-family: $copy--header-text;
-    // Fix the character spacing for headings
-    text-rendering: optimizelegibility;  
-  }
-
-  h1 {
-    @include adjust-font-size-to($copy--h1-size);
-    margin: 0 auto rhythm(1, $copy--h1-size);
-  }
-
-  h2 {
-    @include adjust-font-size-to($copy--h2-size);
-    margin: 0 auto rhythm(1, $copy--h2-size);
-  }
-
-  h3 {
-    @include adjust-font-size-to($copy--h3-size);
-    margin: 0 auto rhythm(1, $copy--h3-size);
-  }
-
-  h4 {
-    @include adjust-font-size-to($copy--h4-size);
-    margin: 0 auto rhythm(1, $copy--h4-size);
-  }
-
-  h5 {
-    @include adjust-font-size-to($copy--h5-size);
-    margin: 0 auto rhythm(1, $copy--h5-size);
-  }
-
-  h6 {
-    @include adjust-font-size-to($copy--h6-size);
-    margin: 0 auto rhythm(1, $copy--h6-size);
-  }
-
-  .subheader { 
-    color: $copy--subheader-text-color; 
-    font-weight: normal; 
-  }
-
-  p {
-    //margin-bottom: $base-line-height;
-    //font-family: $body-text;                           ////////does this not inherit from above??
-    margin: 0 auto rhythm(1);
-  }
-
-// use indentation rather than spacing with consequitive paragraphs. csswizardry.com/2010/12/mo-robust-paragraph-indenting/
-// p+p { text-indent: 2em; margin-top: -1.5em; }
-
-  .lead {  
-    @include adjust-font-size-to($copy--lead-size);
-    margin: 0 auto rhythm(1, $copy--lead-size);
-    color: $copy--lead-text-color;
-  }
-
-  .meta {
-    @include adjust-font-size-to($copy--meta-size, $copy--meta-line-height);
-  }
-
-  .footnote {
-    @include adjust-font-size-to($copy--footnote-size, $copy--footnote-line-height);
-  }
-
-  .muted {
-    color: $muted-color--txt;
-  }
-
-  address {
-    display: block;
-    margin-bottom: $base-line-height;
-    line-height: $base-line-height;
-    font-style: normal;
-  }
-  del {
-    color: $copy--deleted-color;
-    text-decoration: line-through;
-  }
- 
-  cite {
-    font-style: normal;
-  }
-
-  em, 
-  dfn {
-    font-style: italic;
-  }
-  
-  dfn {
-    font-weight: bold;
-  }
-
-  ins { 
-    background: $copy--ins-bg-color; 
-    color: $copy--ins-text-color; 
-    text-decoration: none; 
-  }
-
-  /*h5bp*/
-  mark {
-  font-style: italic;
-  font-weight: bold;
-  }
-}
 
