--- a/templates/project/screen.scss
+++ b/templates/project/screen.scss
@@ -1,16 +1,24 @@
 /**
- * Achetype
+ * Archetype
  * 
- * 1. Imported first to allow for color variables to be available within the settings file.
  */
 
-@import "base/color-pallet";                          /* 1 */
-@import "settings";
+
+/**
+ * Base
+ */
+@import "base/breakpoints";
+@import "base/color-pallet";
+@import "base/typography-pallet";
+@import "base/settings";
+@import "base/typography";
+@import "base/page";
+@import "base/structure-units";
+@import "base/skin-units";
 
 
 /**
  * Objects
- * 
  */
 @import "objects/alert-object";
 @import "objects/button-object";
@@ -22,17 +30,7 @@
 
 
 /**
- * Base
- * 
- */
-@import "base/typography";
-@import "base/page";
-
-
-
-/**
  * Components
- * 
  */
 @import "components/lists";
 @import "components/tables";
@@ -44,7 +42,6 @@
 @import "components/media";
 @import "components/quotes";
 @import "components/rules";
-
 @import "components/alerts";
 @import "components/buttons";
 @import "components/close";
